--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+  <head>
+    <title>Legend of JS</title>
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.png">
+  </head>
   <body>
     <script type="module" src="src/main.js"></script>
   </body>
