--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Legend of JS</title>
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
   </head>
   <body>
     <script type="module" src="src/main.js"></script>
